basic layout set, starting js

--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -12,17 +12,29 @@
 <body>
   <div class="all_page">
     <header>
-      Header
+      <div class="title">MR BEEP'S MATH</div>
     </header>
 
     <div class="body">
-      <div class="col-1">Main Content</div>
-      <div class="col-2">Navigation</div>
-      <div class="col-3">Sidebar</div>
+      <div class="col-1">
+        <div class="question">area for the question</div>
+        <input type="submit" class="calculate" value="Calculate"></input>
+      </div>
+      <div class="col-2">
+        <div class="select_name"><h3>SELECT</h3></div>
+        <form>
+          <input type="radio" name="operation" value="add" checked>Add<br>
+          <input type="radio" name="operation" value="substract">Substract<br>
+          <input type="radio" name="operation" value="multiply">Multiply<br>
+          <input type="radio" name="operation" value="divide">Divide<br>
+          <input type="radio" name="operation" value="all">All<br>
+        </form>
+        <div class="score"><h3>SCORE</h3></div>
+      </div>
+      <div class="col-3">sidebar</div>
     </div>
 
-    <footer>
-      footer
+    <footer>footer
     </footer>
   </div>
 </body>
