generates operations, records input on enter, but does not record input on submit

--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -12,23 +12,27 @@
 <body>
   <div class="all_page">
     <header>
-      <div class="title">MR BEEP'S MATH</div>
+      <div class="title">Mr Beep's Math</div>
     </header>
 
     <div class="body">
       <div class="col-1">
-        <div class="question">area for the question</div>
-        <input type="submit" class="calculate" value="Calculate"></input>
+
+        <div class="question"></div>
+        <br>
+        <div class="answer">
+          <input class="answer_box" type="text" value="" placeholder="type your answer here" ></input>
+          <input type="submit" class="image_button" value="Submit"></input>
+        </div>
       </div>
       <div class="col-2">
-        <div class="select_name"><h3>SELECT</h3></div>
-        <form>
-          <input type="radio" name="operation" value="add" checked>Add<br>
-          <input type="radio" name="operation" value="substract">Substract<br>
-          <input type="radio" name="operation" value="multiply">Multiply<br>
-          <input type="radio" name="operation" value="divide">Divide<br>
-          <input type="radio" name="operation" value="all">All<br>
-        </form>
+        <div class="select"><h3>SELECT</h3></div>
+        <div class="operand_choice">
+          <button type="button" class="add">Add</button>
+          <button type="button" class="substract">Substract</button>
+          <button type="button" class="multiply">Multiply</button>
+          <button type="button" class="divide">Divide</button>
+        </div>
         <div class="score"><h3>SCORE</h3></div>
       </div>
       <div class="col-3">sidebar</div>
