--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -16,15 +16,26 @@
     </header>
 
     <div class="body">
+      <div class="robot"></div>
+
       <div class="col-1">
+        <div class="feedback">
+        </div>
 
         <div class="question"></div>
         <br>
         <div class="answer">
-          <input class="answer_box" type="text" value="" placeholder="type your answer here" ></input>
+          <input class="answer_box" type="text" value="" placeholder="type your answer here" autofocus></input>
           <input type="submit" class="image_button" value="Submit"></input>
         </div>
+        <br>
+        <div class="next_options">
+          <button type="button" class="try again">Try again</button>
+          <button type="button" class="help">Help</button>
+          <button type="button" class="continue">Continue</button>
+        </div>
       </div>
+
       <div class="col-2">
         <div class="select"><h3>SELECT</h3></div>
         <div class="operand_choice">
@@ -35,10 +46,11 @@
         </div>
         <div class="score"><h3>SCORE</h3></div>
       </div>
-      <div class="col-3">sidebar</div>
+
+      <div class="col-3"></div>
     </div>
 
-    <footer>footer
+    <footer>
     </footer>
   </div>
 </body>
