--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -15,34 +15,34 @@
       <div class="title">Mr Beep's Math</div>
     </header>
 
-    <div class="body">
-      <div class="robot"></div>
+    <div class="content">
+      <div class="zapato">
+        <div class="robot" img></div>
 
-      <div class="col-1">
-        <div class="feedback">
-        </div>
+        <div class="col-1">
+          <div class="feedback">
+          </div>
 
-        <div class="question"></div>
-        <br>
-        <div class="answer">
-          <input class="answer_box" type="text" value="" placeholder="type your answer here" autofocus></input>
-          <input type="submit" class="image_button" value="Submit"></input>
-        </div>
-        <br>
-        <div class="next_options">
-          <button type="button" class="try again">Try again</button>
-          <button type="button" class="help">Help</button>
-          <button type="button" class="continue">Continue</button>
+          <div class="question"></div>
+          <br>
+          <div class="answer">
+            <input class="answer_box" type="text" value="" placeholder="type your answer here" autofocus></input>
+            <input type="submit" class="image_button" value="Submit"></input>
+          </div>
+          <br>
+          <!-- <div class="next_options">
+            <button type="button" class="try again" >Try again</button>
+            <button type="button" class="help">Help</button>
+            <button type="button" class="continue">Continue</button>
+          </div> -->
         </div>
       </div>
 
       <div class="col-2">
         <div class="select"><h3>SELECT</h3></div>
         <div class="operand_choice">
-          <button type="button" class="add">Add</button>
-          <button type="button" class="substract">Substract</button>
-          <button type="button" class="multiply">Multiply</button>
-          <button type="button" class="divide">Divide</button>
+          <button type="button" class='sign' class="add" value='+'>Add</button>
+          <button type="button" class='sign' class="substract" value='-'>Substract</button>
         </div>
         <div class="score"><h3>SCORE</h3></div>
       </div>
