--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -47,7 +47,10 @@
         <div class="score"><h3>SCORE</h3></div>
       </div>
 
-      <div class="col-3"></div>
+      <div class="col-3">
+        <div class="numX"></div>
+        <div class="numY"></div>
+      </div>
     </div>
 
     <footer>
