fixed multiple issues, and cleaned up the code just a bit

--- a/mr_beep_math.html
+++ b/mr_beep_math.html
@@ -18,16 +18,16 @@
     <div class="content">
       <div class="zapato">
         <div class="robot_parts">
-          <img src="https://cdn.pbrd.co/images/agXHvkBUX.png" class="robot_head" id="normal_eyes"></img>
-          <img src="https://cdn.pbrd.co/images/aiNuUDkvv.png" class="eye_heart"  ></img>
-          <img src="https://cdn.pbrd.co/images/11V8KmgQ3.png" class="eye_wrong"  ></img>
+          <img src="./images/heart_eyes.png" class="robot_head" id="normal_eyes"></img>
+          <img src="./images/heart_eyes.png" class="eye_heart"  ></img>
+          <img src="./images/wrong_eyes.png" class="eye_wrong"  ></img>
           <!-- <img src="https://cdn.pbrd.co/images/aiNuUDkvv.png" class="eye_check"  ></img> -->
-          <img src="https://cdn.pbrd.co/images/ag9x6ZPte.png" class="robot" ></img>
-          <img src="https://cdn.pbrd.co/images/ak8Lmb8XH.png" class="short_robot" ></img>
+          <img src="./images/robot_body.png" class="robot" ></img>
+          <img src="./images/robot_short.png" class="short_robot" ></img>
         </div>
 
         <div class="col-1">
-          <div class="hi">Hi, Math is FUN <br>   select either add or substract from the list on the left.</div>
+          <div class="hi">Hi, Math is FUN <br>   select either add or subtract from the list on the left.</div>
           <div class="feedback">
           </div>
 
@@ -44,7 +44,7 @@
         <div class="select"><h3>SELECT</h3></div>
         <div class="operand_choice">
           <button type="button" class='sign' class="add" class="btn" value='+'>ADD</button>
-          <button type="button" class='sign' class="substract" class="btn" value='-'>SUBSTRACT</button>
+          <button type="button" class='sign' class="subtract" class="btn" value='-'>SUBTRACT</button>
         </div>
         <div class="score">
           <h3>SCORE</h3>
